<resources>
    <!--<string name="app_name">危险源值守</string>-->
    <string name="app_name">线路巡视</string>
    <string name="txtLogin">登录</string>
    <string name="action_check_remeber_pwd">自动登录</string>
    <string name="string_user">用户名</string>
    <string name="string_user_password">登录密码</string>
    <string name="string_main_title">欢迎您,</string>
    <string name="string_homepage0">线路巡视</string>
    <string name="string_homepage1">巡视状况</string>
    <string name="string_homepage2">缺陷信息</string>
    <string name="string_homepage3">个人中心</string>
    <string name="string_homepage4">上传交涉</string>
    <string name="string_homepage5">交跨物</string>
    <string name="string_homepage6">敬请期待</string>

    <string name="string_uploadposition">上传轨迹</string>
    <string name="string_uploadpatrol">一键巡视</string>
    <string name="string_linepatro">线路巡视</string>
    <string name="string_patrodetail">巡视状况</string>
    <string name="string_defect">缺陷隐患</string>
    <string name="string_defect_signup">登记</string>
    <string name="string_patro_work_name">巡视人:</string>
    <string name="string_not_patro">未巡视</string>
    <string name="string_did_patro">已巡视</string>
    <string name="string_not_patro_reason">未巡视原因</string>
    <string name="string_patro_ratio">巡视率</string>
    <string name="string_uploadtime">上报时间</string>
    <string name="string_type">类型</string>
    <string name="string_tower_type">塔型</string>
    <string name="string_ledger">台账</string>
    <string name="string_height">高度</string>
    <string name="string_position">位置</string>
    <string name="string_defectinfo">缺陷信息</string>
    <string name="string_tower_account_name">杆塔名称</string>
    <string name="string_tower_account_type">杆塔类型</string>
    <string name="string_tower_account_type_detail">杆塔塔型</string>
    <string name="string_tower_account_height">杆塔高度</string>
    <string name="string_tower_account_big_distance">大号侧档距</string>
    <string name="string_tower_account_all_distance">累加档距</string>
    <string name="string_tower_defect_status_handled">已消除</string>
    <string name="string_tower_defect_upload_time">提交时间:</string>
    <string name="string_tower_defect_status_unhandled">未处理</string>
    <string name="string_tower_defect_upload_worker">提交人:</string>
    <string name="string_sign_defect">缺陷登记</string>
    <string name="string_sign_patro">巡视登记</string>
    <string name="string_album">从相册中选取</string>
    <string name="string_take_photo">拍照</string>
    <string name="string_take_video">录制视频</string>
    <string name="string_cancel">取消</string>
    <string name="string_submit">提交</string>
    <string name="string_remark">备注:</string>
    <string name="string_partol_worker">巡视人:</string>
    <string name="string_partol_detail">巡视详情:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_upload_time">上报时间:</string>
    <string name="string_defect_status">缺陷状态:</string>
    <string name="string_upload_worker">上报人:</string>
    <string name="string_defect_info">缺陷信息:</string>
    <string name="string_handle">已处理</string>
    <string name="string_unhandle">未处理</string>
    <string name="string_signin">登记</string>
    <string name="string_locate_by_hand">手动定位</string>
    <string name="error_field_required">请输入有效信息</string>

    <string name="error_login_failed">登录失败，请检查用户名和密码</string>
    <string name="login_success">登录成功</string>
    <string name="error_request_failed">请求失败</string>
    <string name="string_upload_img_success">上传图片成功</string>
    <string name="string_upload_cross_success">提交交跨物成功</string>
    <string name="string_upload_vid_success">上传交涉视频成功</string>
    <string name="string_upload_file1">已上传第</string>
    <string name="string_upload_file2">张图片</string>
    <string name="string_gaode">高德地图</string>
    <string name="string_baidu">百度地图</string>
    <string name="string_uploadsuccess">上传成功！</string>
    <string name="string_uploadfailed">上传失败！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="tip">提示</string>
    <string name="closeapp">确定退出？</string>
    <string name="exit_login">退出登陆</string>
    <string name="error_relogin">登陆失效，请重新登陆</string>
    <string name="string_choose_defect_level">请选择缺陷等级</string>
    <string name="string_defect_level_critical">危急</string>
    <string name="string_defect_level_common">一般</string>
    <string name="string_danger">危险源</string>
    <string name="string_danger_level">等级</string>
    <string name="string_danger_level0">特级</string>
    <string name="string_danger_level1">一级</string>
    <string name="string_danger_level2">二级</string>
    <string name="string_danger_create_time">建立时间:</string>
    <string name="string_danger_create_worker">建立人:</string>
    <string name="string_danger_information">危险源详情:</string>
    <string name="string_danger_date_information">每日详情</string>
    <string name="string_danger_sign">巡视登记</string>
    <string name="string_danger_patro_worker">巡视人</string>
    <string name="string_danger_patro_time">时间</string>
    <string name="string_refresh">刷新</string>
    <string name="string_daily">每日详情</string>
    <string name="string_danger_upload_time">巡视时间:</string>
    <string name="string_danger_upload_worker">巡视人:</string>
    <string name="string_danger_scene_process">工程进度:</string>
    <string name="string_danger_judge">今日是否有大型施工车辆:</string>
    <string name="string_yes">是</string>
    <string name="string_no">否</string>
    <string name="string_danger_daily_upload">危险源巡视登记</string>
    <string name="string_danger_name">危险源名称：</string>
    <string name="string_danger_daily_upload_success">危险源巡视记录已上传!</string>
    <string name="string_danger_daily_upload_failed">危险源巡视记录上传失败!</string>
    <string name="string_danger_daily_reupload">,如需再次上传,请联系管理源删除当日已巡视记录!</string>
    <string name="error_distance">请在距离当前选择杆塔200米内上传巡视记录！</string>

</resources>
